--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Rock Paper Scissors</title>
     </head>
     <body>
-        <script src="game.js"></script>
+      <!--  <script src="game.js"></script> -->
+      <script src="newGame.js"></script>
     </body>
 </html>
