--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Rock Paper Scissors</title>
     </head>
     <body>
-      <!--  <script src="game.js"></script> -->
-      <script src="newGame.js"></script>
+      <script src="newGame.js" defer></script>
+      <button class="playRound">Press to play</button>
     </body>
 </html>
