--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     </head>
     <body>
       <script src="newGame.js" defer></script>
-      <button class="playRound">Press to play</button>
+      <button class="rock">ROCK</button>
+      <button class="paper">PAPER</button>
+      <button class="scissors">SCISSORS</button>
     </body>
 </html>
