Add console log to track round results

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
     <body>
       <script src="newGame.js" defer></script>
-      <button class="rock">ROCK</button>
-      <button class="paper">PAPER</button>
-      <button class="scissors">SCISSORS</button>
+      <button class="rock"><img src="./image/" alt="image of rock"></button>
+      <button class="paper"><img src="./image/" alt="image of paper"></button>
+      <button class="scissors"><img src="./image/" alt="image of scissors"></button>
     </body>
 </html>
