--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <title>Rock Paper Scissors</title>
+      <link rel="stylesheet" href="style.css">
+      <meta charset="UTF-8">
+      <title>Rock Paper Scissors</title>
     </head>
     <body>
       <script src="newGame.js" defer></script>
-      <button class="rock"><img src="./image/" alt="image of rock"></button>
-      <button class="paper"><img src="./image/" alt="image of paper"></button>
-      <button class="scissors"><img src="./image/" alt="image of scissors"></button>
+      <button class="rock"><img src="./images/rock.png" alt="image of rock"></button>
+      <button class="paper"><img src="./images/paper.png" alt="image of paper"></button>
+      <button class="scissors"><img src="./images/scissors.png" alt="image of scissors"></button>
     </body>
 </html>
