Remove unused javaScript code

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     </head>
     <body>
       <script src="newGame.js" defer></script>
-      <button class="rock"><img src="./images/rock.png" alt="image of rock"></button>
-      <button class="paper"><img src="./images/paper.png" alt="image of paper"></button>
-      <button class="scissors"><img src="./images/scissors.png" alt="image of scissors"></button>
+        <div class="playerContainer">
+          <button class="rock"><img src="./images/rock.png" alt="image of rock"></button>
+          <button class="paper"><img src="./images/paper.png" alt="image of paper"></button>
+          <button class="scissors"><img src="./images/scissors.png" alt="image of scissors"></button>
+        </div>
+        <div class="computerContainer"></div>
     </body>
 </html>
