Update code to align with new visuals

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
       <link rel="stylesheet" href="style.css">
       <meta charset="UTF-8">
-      <title>Rock Paper Scissors</title>
+      <title>sword lance axe</title>
     </head>
     <body>
       <script src="newGame.js" defer></script>
         <div class="playerContainer">
-          <button class="rock"><img src="./images/rock.png" alt="image of rock"></button>
-          <button class="paper"><img src="./images/paper.png" alt="image of paper"></button>
-          <button class="scissors"><img src="./images/scissors.png" alt="image of scissors"></button>
+          <button class="sword"><img src="./images/sword.png" alt="image of sword"></button>
+          <button class="lance"><img src="./images/lance.png" alt="image of lance"></button>
+          <button class="axe"><img src="./images/axe.png" alt="image of axe"></button>
         </div>
         <div class="computerContainer"></div>
     </body>
