Complete possible text outputs

--- a/index.html
+++ b/index.html
@@ -7,11 +7,25 @@
     </head>
     <body>
       <script src="newGame.js" defer></script>
+
+      <div class="header">
+        <h1>Emblem Fantasy Fire</h1>
+        <h2>Sword beats Axe | Lance beats Swords | Axe beats Lance</h2>
+
+      </div>
+
         <div class="playerContainer">
           <button class="sword"><img src="./images/sword.png" alt="image of sword"></button>
           <button class="lance"><img src="./images/lance.png" alt="image of lance"></button>
           <button class="axe"><img src="./images/axe.png" alt="image of axe"></button>
         </div>
-        <div class="computerContainer"></div>
+
+        <div class="enemyContainer">
+
+        </div>
+
+        <div class="footer">
+        <h4>Schmoodled</h4>
+        </div>
     </body>
 </html>
